dark mode bug fixed

--- a/src/Joke/style.module.css
+++ b/src/Joke/style.module.css
@@ -3,6 +3,10 @@
     background-color: #181A1B !important;
 }
 
+.dark{
+    border-color: #000 !important;
+}
+
 .joke {
     background-color: #FFF;
     width: 100%;
